# user_grouping

./: .replit  pyproject.toml
user_grouping/: __init__.py  auth.py  dashboard.py  db.py  post.py  schema_valid.py
user_grouping/static/: main.css
user_grouping/templates/: base.html
user_grouping/templates/auth/: register.html
user_grouping/templates/dashboard/: dashboard.html
user_grouping/templates/post/: create.html  index.html  update.html
