[tool.poetry]
name = "usergrouping"
version = "0.1.0"
description = ""
authors = ["saif"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pymongo = {extras = ["srv"], version = "^3.11.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
